--- a/index.html
+++ b/index.html
@@ -194,10 +194,14 @@
                     <h2>PYTHON</h2>
                 </div>
                 <div class="element tc flex column center" id="tc7">
+                    <img src="assets/c++.svg.png" alt="C++" srcset="" width="100vw"><br>
+                    <h2>C++</h2>
+                </div>
+                <div class="element tc flex column center" id="tc8">
                     <img src="assets/mysql.png" alt="MYSQL" srcset="" width="110vw"><br>
                     <h2>MYSQL</h2>
                 </div>
-                <div class="element tc flex column center" id="tc8">
+                <div class="element tc flex column center" id="tc9">
                     <img src="assets/ajax.png" alt="AJAX" srcset="" width="150vw"><br>
                     <h2>AJAX</h2>
                 </div>
