--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
                         <img src="assets/f.png" alt="Logo de Facebook" width="30vw">
                     </a>
                 </div>
+                <div class="m">
+                    <a href="https://www.linkedin.com/in/lisandro-zapata-paternina-769611263/" class="a-normal net">
+                        <img src="assets/linkedin.png" alt="Logo de Linkedin" width="37vw">
+                    </a>
+                </div>
             </div>
             <div>        
                 Todos los derechos reservados © 2023
