--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <meta name="description" content="Este portafolio web contiene todo lo referente a Lisandro Zapata a nivel laboral.">
     <meta property="og:image" content="assets/Yo.jpg">
     <link rel="shortcut icon" href="assets/brand_white(2).png">
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q04R0W6M2F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-Q04R0W6M2F');
+</script>
     <title>Lisandro Zapata | Portafolio</title>
 </head>
 
