--- a/assets/delcaribe/index.html
+++ b/assets/delcaribe/index.html
@@ -57,8 +57,12 @@
             </div>
             <form action="" method="get">
                 <div>
-                    <h4>Número de la mesa</h4>
-                    <input type="number" name="num_mesa" id="" min="0" max="50" value="0">
+                    <h4>Mesa</h4>
+                    <select name="" id="">
+                        <option value="">Seleccione..</option>
+                        <option value="">Mesa 1</option>
+                        <option value="">Mesa 2</option>
+                    </select>
                 </div>
                 <div>
                     <div class="flex space-between" style="width: auto !important;">
