--- a/assets/delcaribe/index.html
+++ b/assets/delcaribe/index.html
@@ -58,10 +58,8 @@
             <form action="" method="get">
                 <div>
                     <h4>Mesa</h4>
-                    <select name="" id="">
-                        <option value="">Seleccione..</option>
-                        <option value="">Mesa 1</option>
-                        <option value="">Mesa 2</option>
+                    <select name="mesa" id="select_mesa">
+                        
                     </select>
                 </div>
                 <div>
