--- a/assets/delcaribe/index.html
+++ b/assets/delcaribe/index.html
@@ -86,6 +86,9 @@
                     </div>
                     <input type="number" name="cant" id="cant" min="0" value="0">
                 </div>
+                <div class="alert inv" id="alert_form_sent_qual">
+
+                </div>
                 <div class="flex center">
                    <input type="submit" value="ORDENAR"> 
                 </div>
