--- a/assets/delcaribe/index.html
+++ b/assets/delcaribe/index.html
@@ -31,7 +31,7 @@
                     <h3>Ordenar</h3>
                 </div>
                 <div>
-                    <button class="button_closer" id="closer_orden">X</button>
+                    <button class="button_closer" id="closer_orden">×</button>
                 </div>
             </div>
             <div>
